--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,11 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_subdirectory(deps/sfml)
-add_subdirectory(deps/imgui)
+find_package(ImGui-SFML REQUIRED)
+find_package(SFML 2.5 COMPONENTS system window graphics audio network REQUIRED)
 
+add_subdirectory(deps/imgui_cmake)
 add_subdirectory(optic_tests)
 
-target_include_directories(optic_tests PRIVATE deps/sfml/include deps/imgui deps)
-target_link_libraries(optic_tests sfml-system sfml-window sfml-network sfml-graphics sfml-audio ImGui-SFML::ImGui-SFML)
+target_include_directories(optic_tests PRIVATE deps)
+target_link_libraries(optic_tests imgui sfml-system sfml-window sfml-network sfml-graphics sfml-audio ImGui-SFML::ImGui-SFML)
